@@ -7,6 +7,8 @@ class Net::SSLeay::X509_NAME : pointer {
   use Fn;
   
   # Class Methods
+  native static method new : Net::SSLeay::X509_NAME ();
+  
   private static method new_with_pointer : Net::SSLeay::X509_NAME ($pointer : Address, $options : object[] = undef) {
     
     my $self = new Net::SSLeay::X509_NAME;
