@@ -12,8 +12,6 @@ class TestCase::Net::SSLeay {
   
   use Net::SSLeay::OBJ;
   use Net::SSLeay::X509;
-  use Net::SSLeay::X509_NAME;
-  use Net::SSLeay::X509_NAME_ENTRY;
   use Sys::OS;
   use Net::SSLeay::ASN1_ENUMERATED;
   use Net::SSLeay::ASN1_INTEGER;
@@ -32,6 +30,8 @@ class TestCase::Net::SSLeay {
   use Net::SSLeay::PKCS12;
   use Net::SSLeay::DER;
   use Net::SSLeay::X509_VERIFY_PARAM;
+  use Net::SSLeay::X509_NAME;
+  use Net::SSLeay::X509_NAME_ENTRY;
   
   our $FILE_DIR : string;
   
@@ -895,6 +895,27 @@ EOS
       
       $param->set1_email("kimoto@foo.com");
       
+    }
+    
+    return 1;
+  }
+  
+  static method X509_NAME : int () {
+    
+    {
+      my $x509_name_entry = Net::SSLeay::X509_NAME_ENTRY->new;
+      
+      unless ($x509_name_entry is_type Net::SSLeay::X509_NAME_ENTRY) {
+        return 0;
+      }
+    }
+    
+    {
+      my $x509_name = Net::SSLeay::X509_NAME->new;
+      
+      unless ($x509_name is_type Net::SSLeay::X509_NAME) {
+        return 0;
+      }
     }
     
     return 1;
